// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should extract meta 1`] = `
Object {
  Symbol(jest-snapshot-serializer-raw): Object {
    "prop": "value",
  },
}
`;

exports[`should use custom return value when no meta exists 1`] = `
Object {
  Symbol(jest-snapshot-serializer-raw): undefined,
}
`;

exports[`should use default return value when no meta exists 1`] = `
Object {
  Symbol(jest-snapshot-serializer-raw): Object {},
}
`;
